--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,6 @@
 <head>
-    {% if site.github.url %}
-      {% assign url_base = site.github.url %}
-    {% else %}
-      {% assign url_base = site.url %}
-    {% endif %}
+    {% comment %}Use a different value if site structure changes {% endcomment %}
+    {% assign url_base = '' %}
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,7 +30,7 @@
 
     <!-- Custom Fonts -->
     <link href="{{ url_base }}/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
+    <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'.html','' }}" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -42,7 +39,7 @@
     <![endif]-->
 
 	<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-89041046-2', 'auto');ga('set', 'anonymizeIp', true);ga('send', 'pageview')</script>
-	
+
     {% if page.style %}
       <style>
         {{ page.style }}
