--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,16 @@
 <!-- Footer -->
 <footer>
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-md-6">
             <p>Copyright &copy; {{ site.time | date: '%Y' }}, {{ site.organization }}</p>
+        </div>
+        <div class="col-md-6">
+          <nav role="navigation">
+            <ul class="list-inline pull-right">
+               <li><a href="/imprint">Imprint</a></li>
+               <li><a href="/privacy">Privacy Policy</a></li>
+            </ul>
+          </nav>
         </div>
     </div>
 </footer>
